# stepit

./: .gitmodules  CMakeLists.txt  README.md
cmake/: stepitConfig.cmake.in  stepit_utils.cmake
config/: environment.sh
config/robot/: a2.yml  (+4 more)
doc/: plugin.md
package/ros2/stepit_ros2/: CMakeLists.txt
plugin/control_console/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/debugging_helper/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/debugging_helper/include/stepit/debugging/: dummy_robot.h
plugin/debugging_helper/src/: dummy_robot.cpp
plugin/field_base/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/field_base/app/: data_info.cpp
plugin/field_base/include/stepit/field/: data_loader.h  field.h  operator.h
plugin/field_base/src/: field.cpp  operator.cpp
plugin/joystick_base/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/joystick_base/app/: joystick_test.cpp
plugin/joystick_base/include/stepit/joystick/: joystick.h  state.h
plugin/joystick_base/src/: joystick.cpp
plugin/joystick_redis/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/joystick_redis/src/: joystick_redis.cpp
plugin/joystick_udp/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/joystick_usb/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/joystick_usb/include/stepit/joystick/: usb.h
plugin/joystick_usb/src/: usb.cpp
plugin/nnrt_ascendcl/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/nnrt_ascendcl/src/: ascendcl.cpp
plugin/nnrt_base/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/nnrt_base/app/: nnrt_test.cpp
plugin/nnrt_base/include/stepit/nnrt/: nnrt.h
plugin/nnrt_base/src/: nnrt.cpp
plugin/nnrt_onnxruntime/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/nnrt_onnxruntime/include/stepit/nnrt/: onnxruntime.h
plugin/nnrt_onnxruntime/src/: onnxruntime.cpp
plugin/nnrt_rknnrt/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/nnrt_tensorrt/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/nnrt_tensorrt/include/stepit/nnrt/: tensorrt.h
plugin/nnrt_tensorrt/src/: tensorrt.cpp
plugin/nnrt_torchjit/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/nnrt_torchjit/include/stepit/nnrt/: torchjit.h
plugin/nnrt_torchjit/src/: torchjit.cpp
plugin/policy_neuro/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/policy_neuro/include/stepit/policy_neuro/: action_source.h  actuator.h  cmd_posture_source.h  cmd_vel_source.h  const_field_source.h  field.h  field_assembler.h  field_history.h  field_ops.h  field_scaling.h  heightmap_source.h  joint_reordering.h  module.h  neuro_module.h  neuro_policy.h  obs_history.h  odometry_source.h  proprioceptor.h  roll_pitch_source.h  time_source.h  time_step_source.h
plugin/policy_neuro/src/: action_source.cpp  actuator.cpp  cmd_posture_source.cpp  cmd_vel_source.cpp  const_field_source.cpp  field.cpp  field_assembler.cpp  field_history.cpp  field_ops.cpp  field_scaling.cpp  heightmap_source.cpp  joint_reordering.cpp  module.cpp  neuro_module.cpp  neuro_policy.cpp  obs_history.cpp  odometry_source.cpp  proprioceptor.cpp  roll_pitch_source.cpp  time_source.cpp  time_step_source.cpp
plugin/policy_neuro/template/: cmd_vel.yml  field_ops.yml  joint_reordering.yml  policy.yml
plugin/policy_neuro_motion_tracking/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/policy_neuro_motion_tracking/include/stepit/policy_neuro/: forward_kinematics.h  geometry_operator.h  motion_clip.h  motion_trajectory.h  relative_pose_source.h
plugin/policy_neuro_motion_tracking/src/: forward_kinematics.cpp  geometry_operator.cpp  motion_clip.cpp  motion_trajectory.cpp  relative_pose_source.cpp
plugin/policy_neuro_motion_tracking/template/: motion_trajectory.yml
plugin/policy_neuro_redis/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/policy_neuro_redis/include/stepit/policy_neuro_redis/: field_subscriber_redis.h  redis_client.h
plugin/policy_neuro_redis/src/: field_subscriber_redis.cpp  redis_client.cpp
plugin/policy_neuro_redis/template/: redis_field_subscriber.yml
plugin/policy_neuro_ros2/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/policy_neuro_ros2/include/stepit/policy_neuro_ros2/: cmd_posture_subscriber2.h  cmd_vel_subscriber2.h  field_subscriber2.h  heightmap_subscriber2.h
plugin/policy_neuro_ros2/src/: cmd_posture_subscriber2.cpp  cmd_vel_subscriber2.cpp  field_subscriber2.cpp  heightmap_subscriber2.cpp
plugin/policy_neuro_ros2/template/: cmd_vel.yml  heightmap.yml
plugin/publisher_csv/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/pyutils/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/pyutils/include/stepit/pyutils/: ndarray_utils.h  pkl_reader.h  python_runtime.h
plugin/pyutils/src/: entry.cpp  ndarray_utils.cpp  npz_reader.cpp  pkl_reader.cpp  python_runtime.cpp
plugin/redis_base/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/redis_base/include/stepit/redis/: redis_client.h
plugin/redis_base/src/: redis_client.cpp
plugin/robot_deeprobotics_lite3/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/robot_deeprobotics_x30/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/robot_unitree/: CMakeLists.txt
plugin/robot_unitree/include/stepit/robot/: unitree.h
plugin/robot_unitree/src/: unitree.cpp
plugin/robot_unitree2/: CMakeLists.txt  README.md  stepit_plugin_manifest.cmake
plugin/robot_unitree2/app/: switch_motion.cpp  switch_service.cpp
plugin/robot_unitree2/include/stepit/robot/unitree2/: a2.h  aliengo_mujoco.h  common.h  g1.h  go2.h  quadruped.h
plugin/robot_unitree2/src/: a2.cpp  aliengo_mujoco.cpp  common.cpp  g1.cpp  go2.cpp  joystick.cpp  quadruped.cpp
plugin/robot_unitree2_ros2/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/robot_unitree2_ros2/src/: quadruped.cpp
plugin/ros2_base/: CMakeLists.txt  stepit_plugin_manifest.cmake
plugin/ros2_base/src/: entry.cpp  joystick.cpp  node.cpp  publisher.cpp
scripts/: build.sh  setup.sh
(+49 files in other folders)
